<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/fonddecran"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:fillViewport="true">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="match_parent"
            android:layout_height="581dp"
            android:layout_margin="30dp"
            android:background="@drawable/custom_edittext"
            app:cardCornerRadius="30dp"
            app:cardElevation="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="581dp"
                android:layout_gravity="center_horizontal"
                android:orientation="vertical"
                android:padding="24dp">

                <TextView
                    android:id="@+id/textView13"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-black"
                    android:text="@string/personal_informations"
                    tools:layout_editor_absoluteX="24dp"
                    tools:layout_editor_absoluteY="112dp" />

                <EditText
                    android:id="@+id/Prenom"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/custom_edittext"
                    android:hint="@string/enter_your_fisrt_name"
                    android:minHeight="48dp"
                    android:padding="8dp"
                    android:textColor="@color/black"
                    android:textColorHighlight="@color/cardview_dark_background" />

                <EditText
                    android:id="@+id/Nom"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/custom_edittext"
                    android:hint="@string/enter_your_last_name"
                    android:minHeight="48dp"
                    android:padding="8dp"
                    android:textColor="@color/black"
                    android:textColorHighlight="@color/cardview_dark_background"
                    android:textColorHint="#2E7D32" />

                <EditText
                    android:id="@+id/AdresseCourriel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/custom_edittext"
                    android:hint="@string/enter_your_mail_adress"
                    android:minHeight="48dp"
                    android:padding="8dp"
                    android:textColor="@color/black"
                    android:textColorHighlight="@color/cardview_dark_background"
                    android:textColorHint="#2E7D32" />

                <EditText
                    android:id="@+id/MotDePasse"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/custom_edittext"
                    android:hint="@string/enter_your_password"
                    android:minHeight="48dp"
                    android:padding="8dp"
                    android:textColor="@color/black"
                    android:textColorHighlight="@color/cardview_dark_background"
                    android:textColorHint="#2E7D32" />

                <EditText
                    android:id="@+id/confirm_password1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/custom_edittext"
                    android:hint="@string/confirm_the_password"
                    android:minHeight="48dp"
                    android:padding="8dp"
                    android:textColor="@color/black"
                    android:textColorHighlight="@color/cardview_dark_background" />

                <EditText
                    android:id="@+id/Adresse"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/custom_edittext"
                    android:hint="@string/your_residential_adress"
                    android:minHeight="48dp"
                    android:padding="8dp"
                    android:textColor="@color/black"
                    android:textColorHighlight="@color/cardview_dark_background" />

                <EditText
                    android:id="@+id/textView12"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-black"
                    android:text="@string/credit_card_informations"
                    tools:layout_editor_absoluteX="26dp"
                    tools:layout_editor_absoluteY="551dp" />

                <EditText
                    android:id="@+id/InformationsCarteCrédit"
                    android:layout_width="match_parent"
                    android:inputType="number"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/custom_edittext"
                    android:hint="@string/card_number"
                    android:minHeight="48dp"
                    android:padding="8dp"
                    android:textColor="@color/black"
                    android:textColorHighlight="@color/cardview_dark_background" />

                <EditText
                    android:id="@+id/cvv"
                    android:inputType="number"
                    android:layout_width="297dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/custom_edittext"
                    android:hint="@string/cvv_code"
                    android:minHeight="48dp"
                    android:padding="8dp"
                    android:textColor="@color/black"
                    android:textColorHighlight="@color/cardview_dark_background" />


            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/signupButton"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:backgroundTint="#19A320"
            android:text="@string/sign_up"
            android:textColor="#212121"
            android:textSize="16sp"
            app:cornerRadius="20dp"
            app:iconTint="#17BA1E"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardView" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>